fixing tailwind and css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- my links -->
     <link
       rel="stylesheet"
-      href="/pubblic/styles-output.css" />
+      href="/public/styles-output.css" />
     <script
       src="/script.js"
       defer></script>
