--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Francesca Giunchedi</title>
   </head>
   <body>
-    <header>
+    <header class="bg-gradient-to-b from-bgBase to-bgGradient">
       <nav>
         <ul class="nav-list">
           <li><a href="">Home</a></li>
@@ -37,22 +37,25 @@
           <li><a href="">Contatti</a></li>
         </ul>
       </nav>
-      <section class="header-containe">
-        <div class="head-calToAction">
-          <p>Francesca Giunchedi</p>
-          <h1>Copyright something smart</h1>
-          <ul>
-            <li>Branding</li>
-            <li>Video</li>
-            <li>Siti-web</li>
-          </ul>
-          <a
-            class="call-to-action"
-            href="http://"
-            >Chiedi un preventivo</a
-          >
+      <section class="nav-section px-4 ">
+        <div class="grid grid-cols-1 md:grid-cols-2">
+          <div class="head-calToAction">
+            <p>Francesca Giunchedi</p>
+            <h1 class="text-center">Copyright something smart</h1>
+            <ul>
+              <li>Branding</li>
+              <li>Video</li>
+              <li>Siti-web</li>
+            </ul>
+            <div class="call-to-action">
+              <a href="http://">Chiedi un preventivo</a>
+            </div>
+          </div>
+          <!-- img -->
+          <div class="hidden">image</div>
         </div>
       </section>
+      <!-- <div class="overlay"></div> -->
     </header>
     <!-- start of main contenent -->
     <main class="main-body">
