setting framework main part

--- a/index.html
+++ b/index.html
@@ -23,31 +23,35 @@
     <link
       rel="stylesheet"
       href="/public/styles-output.css" />
+
     <script
       src="/script.js"
       defer></script>
     <title>Francesca Giunchedi</title>
   </head>
   <body>
-    <header class="bg-gradient-to-b from-bgBase to-bgGradient">
-      <nav>
+    <header>
+      <nav class="shadow-md">
         <ul class="nav-list">
           <li><a href="">Home</a></li>
           <li><a href="">Servizi</a></li>
           <li><a href="">Contatti</a></li>
         </ul>
       </nav>
-      <section class="nav-section px-4 ">
+      <section class="nav-section px-4">
         <div class="grid grid-cols-1 md:grid-cols-2">
           <div class="head-calToAction">
             <p>Francesca Giunchedi</p>
-            <h1 class="text-center">Copyright something smart</h1>
+            <h1 class="text-center">
+              Trasforma il tuo brand con un design unico, animazioni e sito web
+            </h1>
+            <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
             <ul>
               <li>Branding</li>
               <li>Video</li>
               <li>Siti-web</li>
             </ul>
-            <div class="call-to-action">
+            <div class="btn call-to-action">
               <a href="http://">Chiedi un preventivo</a>
             </div>
           </div>
@@ -58,32 +62,63 @@
       <!-- <div class="overlay"></div> -->
     </header>
     <!-- start of main contenent -->
-    <main class="main-body">
-      <section class="section logo-section">
+    <main class="main-body px-4">
+      <section class="section logo-section mt-20">
         <div class="grid sm:grid-cols-1 md:grid-cols-2">
           <div class="logo-description">
-            <h2>Un logo che racconta</h2>
-            <p></p>
+            <h2>
+              Un'identità
+              <br class="md:hidden" />
+              un logo
+            </h2>
+            <!-- Craft your identity with a custom logo -->
+            <p>
+              Crea la tua identità con un logo.
+              <br />
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat,
+              provident incidunt quod minima est omnis labore laboriosam alias
+              quisquam consequatur nisi delectus corrupti voluptas qui dolore ea
+              eligendi, officiis ipsa.
+            </p>
           </div>
-          <div class="logo-examles"></div>
+          <div class="logo-examles shadow-md my-10">
+            <img
+              src=""
+              alt="logo-example" />
+          </div>
         </div>
       </section>
       <section class="section animation-section">
         <div class="grid sm:grid-cols-1 md:grid-cols-2">
-          <div class="animation-examles"></div>
           <div class="animation-description">
-            <h2>Animazioni pche porta vita</h2>
-            <p></p>
+            <h2>Animazioni che donano vita</h2>
+            <p>
+              Presenta i tuoi prodotti con un'animazione accattvante.
+              <br />
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem, esse numquam qui nobis laudantium distinctio
+              dignissimos hic provident! Molestiae quos corrupti eveniet iure
+              temporibus dignissimos accusamus! Iure totam praesentium id.
+            </p>
           </div>
+          <div class="animation-examles shadow-md my-10"></div>
         </div>
       </section>
       <section class="section website-section">
         <div class="grid sm:grid-cols-1 md:grid-cols-2">
           <div class="web-description">
-            <h2>Un sito per presentarsi al meglio</h2>
-            <p></p>
+            <h2>Lascia il segno con un sito</h2>
+            <!-- Make a lasting first impression with a custom website -->
+            <p>
+              Lascia un'impressione duratura con un sito web su misura
+              <br />
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              ipsum minus unde fugiat molestias? Praesentium sequi architecto
+              cupiditate sapiente aperiam deleniti autem corporis ullam vel
+              cumque culpa, est amet quod?
+            </p>
           </div>
-          <div class="web-examles"></div>
+          <div class="web-examles shadow-md my-10"></div>
         </div>
       </section>
     </main>
@@ -98,9 +133,9 @@
         <article></article>
         <div>
           <a
-            class="call-to-action"
+            class="btn btn-primary"
             href="http://"
-            >Chiedi un preventivo</a
+            >Contattami</a
           >
           <p>Sei delle domande su servizi, costi e consulenze scrivimi pure</p>
         </div>
