--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           <li><a href="">Contatti</a></li>
         </ul>
       </nav>
-      <section class="nav-section px-4">
+      <section class="nav-section px-4 flex justify-center">
         <div class="grid grid-cols-1 md:grid-cols-2">
           <div class="head-calToAction">
-            <p>Francesca Giunchedi</p>
+            <p class="hidden">Francesca Giunchedi</p>
             <h1 class="text-center">
               Trasforma il tuo brand con un design unico, animazioni e sito web
             </h1>
@@ -122,7 +122,7 @@
         </div>
       </section>
     </main>
-    <section class="presentation-section">
+    <section class="presentation-section px-4">
       <div class="grid sm:grid-cols-1 md:grid-cols-2">
         <h3>Francesca Giunchedi</h3>
         <ul>
@@ -142,6 +142,6 @@
       </div>
     </section>
     <!-- start of footer -->
-    <footer>copirigthin etc</footer>
+    <footer class="px-4 py-5">copirigthin etc</footer>
   </body>
 </html>
