header phone size

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <link
       rel="stylesheet"
       href="/src/style.css" />
+    <!-- font awsome -->
+    <script
+      src="https://kit.fontawesome.com/8805a199d5.js"
+      crossorigin="anonymous"></script>
 
     <title>Francesca Giunchedi</title>
   </head>
@@ -45,19 +49,26 @@
       <section class="margins presentation">
         <div>
           <div>
-            <p>Francesca Giunchedi</p>
-            <h1>
+            <h6 class="mb-5">Francesca Giunchedi</h6>
+            <h1 class="mb-2">
               Trova il <span>vero io</span> del tuo brand
               <!-- Transforma il tuo brand con un design unico, animazioni e sito web -->
             </h1>
             <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
-            <ul class="work-titles">
-              <li>Branding</li>
-              <li>Video</li>
-              <li>Siti-web</li>
-            </ul>
-            <div>
-              <a href="http://">Chiedi un preventivo</a>
+            <h6 class="mb-5">
+              <ul class="work-titles">
+                <li>Branding</li>
+                <li>Video</li>
+                <li>Siti-web</li>
+              </ul>
+            </h6>
+            <div class="call-to-action">
+              <a
+                class="button shadowsm"
+                style="background-color: #6de38c"
+                href="http://"
+                >Chiedi un preventivo</a
+              >
             </div>
           </div>
           <!-- img -->
@@ -136,7 +147,8 @@
       <section class="about-me">
         <div>
           <h3>Francesca Giunchedi</h3>
-          <ul class="work-titles" >
+
+          <ul class="work-titles">
             <li>Branding</li>
             <li>Video</li>
             <li>Siti-web</li>
