--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- css -->
     <link
       rel="stylesheet"
-      href="/src/styles.css" />
+      href="/public/styles.css" />
     <!-- font awsome -->
     <script
       src="https://kit.fontawesome.com/8805a199d5.js"
