constructing ipad layout

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             </div>
           </div>
           <!-- img -->
-          <div class="d-none d-md-flex">image</div>
+          <div class="d-none d-md-flex justify-content-end presentation-image">
+            image
+          </div>
         </div>
       </section>
     </header>
@@ -101,7 +103,7 @@
               eligendi, officiis ipsa.
             </p>
           </div>
-          <div class="d-none d-md-block">
+          <div class="d-none d-md-block mt-5 shadowsm">
             <img
               src=""
               alt="logo-example" />
@@ -130,7 +132,7 @@
               temporibus dignissimos accusamus! Iure totam praesentium id.
             </p>
           </div>
-          <div class="d-none d-md-block">
+          <div class="d-none d-md-block mt-5 shadowsm">
             <img
               src=""
               alt="animation-example" />
@@ -160,7 +162,7 @@
               cumque culpa, est amet quod?
             </p>
           </div>
-          <div class="d-none d-md-block">
+          <div class="d-none d-md-block mt-5 shadowsm">
             <img
               src=""
               alt="website-example" />
@@ -169,7 +171,7 @@
       </section>
       <section class="about-me">
         <div>
-          <div class="shadowsm d-block d-md-none mb-5">
+          <div class="shadowsm d-block mb-5">
             <img
               class="logo-img"
               src=""
