--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div>
             <h6 class="mb-5">Francesca Giunchedi</h6>
             <h1 class="mb-3 pt-5">
-              Trova il <span>vero io</span> del tuo brand
+              Trova il vero io del tuo brand
               <!-- Transforma il tuo brand con un design unico, animazioni e sito web -->
             </h1>
             <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
@@ -65,7 +65,7 @@
             <div class="call-to-action">
               <a
                 class="button shadowsm"
-                style="background-color: #6de38c"
+          
                 href="http://"
                 >Chiedi un preventivo</a
               >
@@ -89,7 +89,7 @@
           </div>
           <div class="section-text">
             <h2>
-              Un' identità <br />
+              Un' identità, <br />
               un logo
             </h2>
             <!-- Craft your identity with a custom logo -->
@@ -118,7 +118,7 @@
           </div>
           <div class="section-text">
             <h2>
-              Animazioni <br />
+              Animazione e<br />
               comunicazione
             </h2>
             <p>
@@ -141,7 +141,7 @@
           </div>
           <div class="section-text">
             <h2>
-              Un sito <br />
+              Un sito, <br />
               un biglietto da visita
             </h2>
             <!-- Make a lasting first impression with a custom website -->
