--- a/index.html
+++ b/index.html
@@ -41,40 +41,38 @@
     <header>
       <nav class="shadowsm">
         <ul>
-          <li class="py-4 px-3"><a href="">Home</a></li>
-          <li class="py-4 px-3"><a href="">Servizi</a></li>
-          <li class="py-4 px-3"><a href="">Contatti</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Servizi</a></li>
+          <li><a href="">Contatti</a></li>
         </ul>
       </nav>
       <section class="margins presentation">
-        <div>
-          <div>
-            <h6 class="mb-5">Francesca Giunchedi</h6>
-            <h1 class="mb-3 pt-5">
-              Trova il vero io del tuo brand
-              <!-- Transforma il tuo brand con un design unico, animazioni e sito web -->
-            </h1>
-            <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
-            <h6 class="mb-5">
-              <ul class="work-titles">
-                <li>Branding</li>
-                <li>Video</li>
-                <li>Siti-web</li>
-              </ul>
-            </h6>
-            <div class="call-to-action">
-              <a
-                class="button shadowsm"
-          
-                href="http://"
-                >Chiedi un preventivo</a
-              >
-            </div>
+        <div class="presentation-text">
+          <h6>Francesca Giunchedi</h6>
+          <h1>
+            Trova il vero io <br class="d-none d-lg-block" />
+            del tuo brand
+            <!-- Transforma il tuo brand con un design unico, animazioni e sito web -->
+          </h1>
+          <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
+          <h6>
+            <ul class="work-titles">
+              <li>Branding</li>
+              <li>Video</li>
+              <li>Siti-web</li>
+            </ul>
+          </h6>
+          <div class="call-to-action">
+            <a
+              class="button shadowsm"
+              href="http://"
+              >Chiedi un preventivo</a
+            >
           </div>
-          <!-- img -->
-          <div class="d-none d-md-flex justify-content-end presentation-image">
-            image
-          </div>
+        </div>
+        <!-- img -->
+        <div class="d-none d-md-flex justify-content-end presentation-image">
+          image
         </div>
       </section>
     </header>
@@ -170,7 +168,6 @@
               alt="photo" />
           </div>
           <h3 class="text-center">Francesca Giunchedi</h3>
-
           <ul class="work-titles text-center mb-5">
             <li>Branding</li>
             <li>Video</li>
