--- a/index copy.html
+++ b/index copy.html
@@ -8,60 +8,82 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous" />
 
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet" />
     <!-- css -->
     <link
       rel="stylesheet"
-      href="/css/index.css" />
+      href="/css/index copy.css" />
     <!-- font awsome -->
     <script
       src="https://kit.fontawesome.com/8805a199d5.js"
       crossorigin="anonymous"></script>
 
-    <title>Francesca Giunchedi</title>
+    <title>Francesca Giunchedi template</title>
   </head>
   <body>
     <header>
-      <nav class="shadow">
+      <nav class="shadowsm">
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">Servizi</a></li>
           <li><a href="">Contatti</a></li>
         </ul>
       </nav>
-      <section>
-        <div>
+      <section class="margins presentation">
+        <div class="presentation-text">
           <h6>Francesca Giunchedi</h6>
           <h1>
-            Trova il vero io del tuo brand
+            Trova il vero io <br class="d-none d-lg-block" />
+            del tuo brand
             <!-- Transforma il tuo brand con un design unico, animazioni e sito web -->
           </h1>
           <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
           <h6>
-            <ul class="list-row">
+            <ul class="work-titles">
               <li>Branding</li>
               <li>Video</li>
               <li>Siti-web</li>
             </ul>
           </h6>
-          <div class="button">
-            <a href="http://">Chiedi un preventivo</a>
+          <div class="call-to-action">
+            <a
+              class="button shadowsm"
+              href="http://"
+              >Chiedi un preventivo</a
+            >
           </div>
         </div>
         <!-- img -->
-        <div>image</div>
+        <div class="d-none d-md-flex justify-content-end presentation-image">
+          image
+        </div>
       </section>
     </header>
     <!-- start of main contenent -->
-    <main>
+    <main class="margins">
       <section>
-        <div>
-          <div>
+        <div class="main-sections">
+          <div class="shadowsm d-block d-md-none mb-5">
             <img
               src=""
               alt="logo-example" />
           </div>
-          <div>
+          <div class="section-text">
             <h2>
               Un' identità, <br />
               un logo
@@ -76,7 +98,7 @@
               eligendi, officiis ipsa.
             </p>
           </div>
-          <div>
+          <div class="d-none d-md-block mt-5 shadowsm section-img">
             <img
               src=""
               alt="logo-example" />
@@ -84,13 +106,13 @@
         </div>
       </section>
       <section>
-        <div>
-          <div>
+        <div class="main-sections">
+          <div class="shadowsm mb-5 mb-md-0 mt-md-5 section-im">
             <img
               src=""
               alt="animation-example" />
           </div>
-          <div>
+          <div class="section-text">
             <h2>
               Animazione e<br />
               comunicazione
@@ -107,13 +129,13 @@
         </div>
       </section>
       <section>
-        <div>
-          <div>
+        <div class="main-sections">
+          <div class="shadowsm d-block d-md-none mb-5">
             <img
               src=""
               alt="website-example" />
           </div>
-          <div>
+          <div class="section-text">
             <h2>
               Un sito, <br />
               un biglietto da visita
@@ -128,34 +150,37 @@
               cumque culpa, est amet quod?
             </p>
           </div>
-          <div>
+          <div class="d-none d-md-block mt-5 shadowsm section-img">
             <img
               src=""
               alt="website-example" />
           </div>
         </div>
       </section>
-      <section>
+      <section class="about-me">
         <div>
-          <div>
+          <div class="shadowsm d-block mb-5">
             <img
+              class="logo-img"
               src=""
               alt="photo" />
           </div>
-          <h3>Francesca Giunchedi</h3>
-          <h6>
-            <ul class="list-row">
-              <li>Branding</li>
-              <li>Video</li>
-              <li>Siti-web</li>
-            </ul>
-          </h6>
+          <h3 class="text-center">Francesca Giunchedi</h3>
+          <ul class="work-titles text-center mb-5">
+            <li>Branding</li>
+            <li>Video</li>
+            <li>Siti-web</li>
+          </ul>
           <article></article>
           <div>
-            <div class="button">
-              <a href="http://">Contattami</a>
+            <div class="d-flex justify-content-center">
+              <a
+                class="button shadowsm"
+                href="http://"
+                >Contattami</a
+              >
             </div>
-            <p>
+            <p class="text-center">
               Sei delle domande su servizi, <br />
               costi e consulenze scrivimi pure
             </p>
@@ -164,8 +189,6 @@
       </section>
     </main>
     <!-- start of footer -->
-    <footer>
-      <div>copirigthin etc</div>
-    </footer>
+    <footer class="margins text-center">copirigthin etc</footer>
   </body>
 </html>
