--- a/index.html
+++ b/index.html
@@ -49,15 +49,21 @@
           </div>
         </div>
         <!-- img -->
-        <div>image</div>
+        <div>
+          <img
+            class="shadow-in"
+            src=""
+            alt="imgae_presentation" />
+        </div>
       </section>
     </header>
     <!-- start of main contenent -->
     <main>
-      <section>
+      <section class="about-logos">
         <div>
           <div>
             <img
+              class="shadow"
               src=""
               alt="logo-example" />
           </div>
@@ -76,17 +82,13 @@
               eligendi, officiis ipsa.
             </p>
           </div>
-          <div>
-            <img
-              src=""
-              alt="logo-example" />
-          </div>
         </div>
       </section>
-      <section>
+      <section class="about-animations">
         <div>
           <div>
             <img
+              class="shadow"
               src=""
               alt="animation-example" />
           </div>
@@ -106,10 +108,11 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="about-websites">
         <div>
           <div>
             <img
+              class="shadow"
               src=""
               alt="website-example" />
           </div>
@@ -128,17 +131,13 @@
               cumque culpa, est amet quod?
             </p>
           </div>
-          <div>
-            <img
-              src=""
-              alt="website-example" />
-          </div>
         </div>
       </section>
-      <section>
+      <section class="about-me">
         <div>
           <div>
             <img
+              class="shadow"
               src=""
               alt="photo" />
           </div>
@@ -157,7 +156,7 @@
             </div>
             <p>
               Sei delle domande su servizi, <br />
-              costi e consulenze scrivimi pure
+              costi e consulenze contattami
             </p>
           </div>
         </div>
