--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <!-- img -->
-        <div>
+        <div class="header-img">
           <img
             class="shadow-in"
             src=""
@@ -149,7 +149,12 @@
               <li>Siti-web</li>
             </ul>
           </h6>
-          <article></article>
+          <article>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Reprehenderit earum adipisci quibusdam, obcaecati libero neque
+            maiores nemo nobis consequatur delectus dolore quo dolores
+            veritatis, provident similique nostrum vel aut consectetur.
+          </article>
           <div>
             <div class="button">
               <a href="http://">Contattami</a>
@@ -164,7 +169,9 @@
     </main>
     <!-- start of footer -->
     <footer>
-      <div>copirigthin etc</div>
+      <div>
+        <p>copirigthin etc</p>
+      </div>
     </footer>
   </body>
 </html>
