prepare for grid system
preparing for making a grid system for the main sections of the site

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main>
       <section class="about-logos">
         <div>
-          <div>
+          <div class="section-img">
             <img
               class="shadow"
               src=""
@@ -86,7 +86,7 @@
       </section>
       <section class="about-animations">
         <div>
-          <div>
+          <div class="section-img">
             <img
               class="shadow"
               src=""
@@ -110,7 +110,7 @@
       </section>
       <section class="about-websites">
         <div>
-          <div>
+          <div class="section-img">
             <img
               class="shadow"
               src=""
@@ -135,7 +135,7 @@
       </section>
       <section class="about-me">
         <div>
-          <div>
+          <div class="section-img">
             <img
               class="shadow"
               src=""
