header for desktop responsive

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <header>
       <nav class="shadow">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Servizi</a></li>
-          <li><a href="">Contatti</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="#service">Servizi</a></li>
+          <li><a href="#about-me">Contatti</a></li>
         </ul>
       </nav>
       <section>
-        <div>
+        <div class="header-text">
           <h6>Francesca Giunchedi</h6>
           <h1>
             Trova il vero io del tuo brand
@@ -49,25 +49,23 @@
           </div>
         </div>
         <!-- img -->
-        <div class="header-img">
-          <img
-            class="shadow-in"
-            src=""
-            alt="imgae_presentation" />
-        </div>
+        <img
+          class="header-img"
+          src="/img/luxury-business-card-mockup-psd-pink-tone-with-front-rear/v968-17d-02-mockup.jpg"
+          alt="imgae_presentation" />
       </section>
     </header>
     <!-- start of main contenent -->
     <main>
-      <section class="about-logos">
-        <div>
+      <section id="service">
+        <div class="about logos">
           <div class="section-img">
             <img
               class="shadow"
               src=""
               alt="logo-example" />
           </div>
-          <div>
+          <div class="section-text">
             <h2>
               Un' identità, <br />
               un logo
@@ -84,15 +82,15 @@
           </div>
         </div>
       </section>
-      <section class="about-animations">
-        <div>
+      <section>
+        <div class="about animations">
           <div class="section-img">
             <img
               class="shadow"
               src=""
               alt="animation-example" />
           </div>
-          <div>
+          <div class="section-text">
             <h2>
               Animazione e<br />
               comunicazione
@@ -108,15 +106,15 @@
           </div>
         </div>
       </section>
-      <section class="about-websites">
-        <div>
+      <section>
+        <di class="about websites">
           <div class="section-img">
             <img
               class="shadow"
               src=""
               alt="website-example" />
           </div>
-          <div>
+          <div class="section-text">
             <h2>
               Un sito, <br />
               un biglietto da visita
@@ -131,9 +129,9 @@
               cumque culpa, est amet quod?
             </p>
           </div>
-        </div>
+        </di>
       </section>
-      <section class="about-me">
+      <section id="about-me">
         <div>
           <div class="section-img">
             <img
@@ -141,21 +139,23 @@
               src=""
               alt="photo" />
           </div>
-          <h3>Francesca Giunchedi</h3>
-          <h6>
-            <ul class="list-row">
-              <li>Branding</li>
-              <li>Video</li>
-              <li>Siti-web</li>
-            </ul>
-          </h6>
-          <article>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Reprehenderit earum adipisci quibusdam, obcaecati libero neque
-            maiores nemo nobis consequatur delectus dolore quo dolores
-            veritatis, provident similique nostrum vel aut consectetur.
-          </article>
           <div>
+            <h3>Francesca Giunchedi</h3>
+            <h6>
+              <ul class="list-row">
+                <li>Branding</li>
+                <li>Video</li>
+                <li>Siti-web</li>
+              </ul>
+            </h6>
+            <article>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit earum adipisci quibusdam, obcaecati libero neque
+              maiores nemo nobis consequatur delectus dolore quo dolores
+              veritatis, provident similique nostrum vel aut consectetur.
+            </article>
+          </div>
+          <div class="contact">
             <div class="button">
               <a href="http://">Contattami</a>
             </div>
