--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- img -->
         <img
           class="header-img"
-          src="/img/luxury-business-card-mockup-psd-pink-tone-with-front-rear/v968-17d-02-mockup.jpg"
+          src="/img/828-1000x1000.jpg"
           alt="imgae_presentation" />
       </section>
     </header>
@@ -62,7 +62,7 @@
           <div class="section-img">
             <img
               class="shadow"
-              src=""
+              src="/img/275-1000x1000.jpg"
               alt="logo-example" />
           </div>
           <div class="section-text">
@@ -87,7 +87,7 @@
           <div class="section-img">
             <img
               class="shadow"
-              src=""
+              src="/img/544-1000x1000.jpg"
               alt="animation-example" />
           </div>
           <div class="section-text">
@@ -111,7 +111,7 @@
           <div class="section-img">
             <img
               class="shadow"
-              src=""
+              src="/img/530-1000x1000.jpg"
               alt="website-example" />
           </div>
           <div class="section-text">
@@ -136,7 +136,7 @@
           <div class="section-img">
             <img
               class="shadow"
-              src=""
+              src="/img/avatar.png"
               alt="photo" />
           </div>
           <div>
