layout and css done
now i only need to fillit with content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="header-text">
           <h6>Francesca Giunchedi</h6>
           <h1>
-            Trova il vero io del tuo brand
+            Trova il vero io <br> del tuo brand
             <!-- Transforma il tuo brand con un design unico, animazioni e sito web -->
           </h1>
           <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
@@ -139,7 +139,7 @@
               src="/img/avatar.png"
               alt="photo" />
           </div>
-          <div>
+          <div class="info-me">
             <h3>Francesca Giunchedi</h3>
             <h6>
               <ul class="list-row">
