--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="header-text">
           <h6>Francesca Giunchedi</h6>
           <h1>
-            Trova il vero io <br> del tuo brand
+            Trova il vero io <br />
+            del tuo brand
             <!-- Transforma il tuo brand con un design unico, animazioni e sito web -->
           </h1>
           <!-- <h1 class="text-center">Transform your brand with custom design, animation, and a website that tells your story.</h1> -->
@@ -84,11 +85,10 @@
       </section>
       <section>
         <div class="about animations">
-          <div class="section-img">
-            <img
-              class="shadow"
-              src="/img/544-1000x1000.jpg"
-              alt="animation-example" />
+          <div class="section-img video-responsive">
+            <iframe
+              class="video"
+              src="https://vimeo.com/676796953"></iframe>
           </div>
           <div class="section-text">
             <h2>
