--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
         <div class="about animations">
           <div class="section-img video-responsive">
             <iframe
-              class="video"
-              src="https://vimeo.com/676796953"></iframe>
+              src="https://player.vimeo.com/video/676796953?h=531340b62a"
+              width="640"
+              height="360"
+              frameborder="0"
+              allow="autoplay; fullscreen; picture-in-picture"
+              allowfullscreen></iframe>
           </div>
           <div class="section-text">
             <h2>
