--- a/index black humor test.html
+++ b/index black humor test.html
@@ -33,8 +33,7 @@
         <div class="header-text">
           <h6>Francesca Giunchedi</h6>
           <h1>
-            Libero professionista <br/>
-            per progetti di comunicazione e creatività
+            One-Person Creative Sweatshop: Available for Hir
             <!-- ENG
             Communication and Creative Projects Freelancer -->
           </h1>
@@ -70,18 +69,17 @@
               alt="logo-example" />
           </div>
           <div class="section-text">
-            <h2>Loghi e branding</h2>
+            <h2>Logos e branding</h2>
 
             <p>
-              In qualità di designer di loghi, il mio ruolo consiste nella
-              creazione di un design unico che comunichi in modo efficace i
-              valori, la missione e lo scopo di un'azienda. Collaboro con i
-              clienti per comprendere i loro obiettivi di branding e il loro
-              pubblico di riferimento e, se necessario, creo linee guida per
-              garantire una rappresentazione visiva coerente su diverse
-              piattaforme media.
-              <!-- ENG
-              As a logo designer, my role is to create a unique design that effectively communicates a company's values, mission, and purpose. I collaborate with clients to understand their branding goals and target audience, and if necessary, create brand guidelines for consistent visual representation across various media platforms -->
+              I specialize in creating logos and branding that will make your
+              company stand out from the competition - because let's face it, in
+              this dog-eat-dog world, you need to be the alpha dog. My designs
+              effectively communicate your company's values, mission, and
+              purpose, so you can be sure your customers will know what you're
+              all about. And don't worry, I'll create brand guidelines so your
+              message is consistent across all media platforms - because
+              inconsistency is so last season.
             </p>
           </div>
         </div>
@@ -160,12 +158,10 @@
               </ul>
             </h6>
             <article>
-              Graphic Designer di comprovata esperienza, specializzata in ambito
-              d'animazione 2d/3d, branding e web develpment. Estremamente
-              creativa, disponibile, organizzata, motivata e alla continua
-              ricerca di nuovi obiettivi da raggiungere. Competente in ambiti
-              amministrativi, contatto con la clientela e fatturazione grazie
-              alle esperienze ottenute in canada e in italia.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit earum adipisci quibusdam, obcaecati libero neque
+              maiores nemo nobis consequatur delectus dolore quo dolores
+              veritatis, provident similique nostrum vel aut consectetur.
             </article>
           </div>
           <div class="contact">
