--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="header-text">
           <h6>Francesca Giunchedi</h6>
           <h1>
-            Libero professionista <br/>
+            Libero professionista <br />
             per progetti di comunicazione e creatività
             <!-- ENG
             Communication and Creative Projects Freelancer -->
@@ -89,13 +89,13 @@
       <section>
         <div class="about animations">
           <div class="section-img video-responsive">
-            <iframe
+            <!-- <iframe
               src="https://player.vimeo.com/video/676796953?h=531340b62a"
               width="640"
               height="360"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
+              allowfullscreen></iframe> -->
           </div>
           <div class="section-text">
             <h2>
