--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="header-text">
           <h6>Francesca Giunchedi</h6>
           <h1>
-            Libero professionista <br />
-            per progetti di comunicazione e creatività
+            <span>Libero professionista</span> <br />
+            comunicazione e creatività
             <!-- ENG
             Communication and Creative Projects Freelancer -->
           </h1>
@@ -54,7 +54,7 @@
         <div class="headerimage-div">
           <img
             class="header-img"
-            src="/img/828-1000x1000.jpg"
+            src="https://loremflickr.com/1280/1280/illustration"
             alt="imgae_presentation" />
         </div>
       </section>
@@ -66,7 +66,7 @@
           <div class="section-img">
             <img
               class="shadow"
-              src="/img/275-1000x1000.jpg"
+              src="https://loremflickr.com/1280/1280/illustration"
               alt="logo-example" />
           </div>
           <div class="section-text">
@@ -88,7 +88,10 @@
       </section>
       <section>
         <div class="about animations">
-          <div class="section-img video-responsive">
+          <div class="section-img video-responsive shadow">
+            <img
+              src="https://loremflickr.com/1280/1280/illustration"
+              alt="" />
             <!-- <iframe
               src="https://player.vimeo.com/video/676796953?h=531340b62a"
               width="640"
@@ -118,7 +121,7 @@
           <div class="section-img">
             <img
               class="shadow"
-              src="/img/530-1000x1000.jpg"
+              src="https://loremflickr.com/1280/1280/illustration"
               alt="website-example" />
           </div>
           <div class="section-text">
