--- a/index.html
+++ b/index.html
@@ -52,8 +52,26 @@
         </div>
         <!-- img -->
         <div class="headerimage-div">
+          <svg
+            width="100vh"
+            height="100vh">
+            <defs>
+              <clipPath id="myClip">
+                <circle
+                  class="cicle"
+                  cx="50%"
+                  cy="50%"
+                  r="50%" />
+                <rect
+                  class="rect"
+                  x="50%"
+                  width="100%"
+                  height="100%" />
+              </clipPath>
+            </defs>
+          </svg>
           <img
-            class="header-img"
+            class="header-img mask"
             src="https://loremflickr.com/1280/1280/illustration"
             alt="imgae_presentation" />
         </div>
